<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.gamereview.LoginScreen">

    <ImageView
        android:id="@+id/imagemLogo"
        android:layout_width="203dp"
        android:layout_height="212dp"
        android:layout_gravity="center"
        android:layout_marginStart="104dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="104dp"
        app:layout_constraintBottom_toTopOf="@+id/userInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="236dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="admin"
        android:textColor="#FFFFFF"
        android:textColorHint="#61FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/userInput"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#F8F7F7"
        android:ems="10"
        android:hint="@string/loginUser"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="admin"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#57FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemLogo" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="198dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/saveUserCB"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEntrar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="255dp"
        android:layout_height="62dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="78dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="validateLogin"
        android:text="@string/entryButton"
        android:textColorHighlight="#9F9F9F"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="140dp"
        android:text="@string/RecoverPassword"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="71dp"
        android:text="Novo por aqui?"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="26dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="67dp"
        android:text="@string/registerButton"
        android:textColor="#FFFDFD"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>